src/localpen/assets/localpen.css
/* ... */
.gutter #handle {
  width: 4px;
  height: 30px;
  border-radius: 2px;
  background-color: #e7e8f1;
}

#logo {
  width: 50px;
  margin: 3px 10px;
  padding: 0;
}

#logo a {
  text-decoration: none;
}

#select-editor {
  position: relative;
  color: #eeeeee;
  margin: 0;
  height: 100%;
  width: calc(50% - 70px);
}
#select-editor > ul {
  margin: 0;
  width: 100%;
  height: 40px;
  margin-top: 3px;
  display: flex;
  justify-content: space-between;
  align-items: stretch;
}
li.editor-title {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  list-style: none;
  border: 2px solid #444857;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  width: 32%;
  cursor: pointer;
}

li.editor-title.active {
  background-color: #444857;
}

li.editor-title > button {
  position: absolute;
  right: 5%;
  text-decoration: none;
  width: 20px;
  height: 20px;
  padding: 0;
  margin: 0;
  border: 0;
  border-radius: 3px;
  background-color: #5a6074da;
  cursor: pointer;
  outline: none;
}

li.editor-title > button:hover {
  background-color: #777c8dda;
}

li.editor-title.active > button {
  background-color: #001b25d3;
}

li.editor-title.active > button:hover {
  background-color: #213c46d3;
}

.dropdown-menu {
  display: none;
  position: absolute;
  left: 0;
  top: 35px;
  z-index: 1000;
  width: 100%;
  min-width: 150px;
  padding: 5px 0;
  list-style: none;
  background-color: #fff;
  border: 1px solid #ccc;
  border-radius: 3px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  background-clip: padding-box;
}

li.editor-title > button:focus + .dropdown-menu,
#settings-button:focus + #settings-menu-container,
#settings-menu-container:hover,
#settings-button:focus + #settings-menu-container .dropdown-menu,
#settings-menu:hover {
  display: block;
}

.dropdown-menu li > * {
  display: block;
  text-decoration: none;
  color: #222;
  padding: 5px 15px;
}

.dropdown-menu li:hover {
  background-color: #e7e8f1;
}

#settings-menu-container {
  display: none;
  position: absolute;
  top: 40px;
  right: 10px;
  height: calc(100vh - 40px);
  width: 600px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
#settings-menu-container::-webkit-scrollbar {
  display: none;
}

#settings-menu {
  top: 0;
  right: 0;
  left: unset;
  margin-top: 0;
  width: 250px;
}

#settings-menu li,
#settings-menu li > * {
  position: relative;
}

.submenu {
  display: none !important;
  position: absolute !important;
  right: 98%;
  left: unset;
  top: 0;
  margin: 0 !important;
  padding: 0 !important;
}

#open-link:hover + #open-list,
#open-list:hover,
#settings-menu a:hover + .submenu,
.submenu:hover {
  display: block !important;
}

#select-editor,
.dropdown-menu,
#buttons {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.switch {
  cursor: pointer;
}

.switch div {
  position: absolute;
  display: block;
  width: 34px;
  height: 18px;
  right: 1em;
  top: 0.4em;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.switch .slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.switch .slider:before {
  position: absolute;
  content: '';
  height: 14px;
  width: 14px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.switch input:checked + .slider {
  background-color: #2196f3;
}

.switch input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

.switch input:checked + .slider:before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

.switch .slider.round {
  border-radius: 16px;
}

.switch .slider.round:before {
  border-radius: 50%;
}

#notifications {
  display: inline-block;
  position: absolute;
  bottom: 0;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  text-align: center;
  padding: 10px;
  color: #2e2e2e;
  background-color: #f5f6fc;
  border: 1px solid black;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  box-shadow: 0 6px 12px #0000002d;
  -webkit-animation: slideIn 0.4s;
  animation: slideIn 0.4s forwards;
}

#notifications.hidden {
  bottom: -200px;
  -webkit-animation: slideOut 0.4s;
  animation: slideOut 0.4s forwards;
}

#notifications.error {
  color: crimson;
  background-color: #fff5f6;
}

@-webkit-keyframes slideIn {
  from {
    bottom: -200px;
    opacity: 0;
  }
  to {
    bottom: 0;
    opacity: 1;
  }
}

@keyframes slideIn {
  from {
    bottom: -200px;
    opacity: 0;
  }
  to {
    bottom: 0;
    opacity: 1;
  }
}
@-webkit-keyframes slideOut {
  from {
    bottom: 0;
    opacity: 1;
  }
  to {
    bottom: -200px;
    opacity: 0;
  }
}
@keyframes slideOut {
  from {
    bottom: 0;
    opacity: 1;
  }
  to {
    bottom: -200px;
    opacity: 0;
  }
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@-webkit-keyframes overlayfadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.7;
  }
}

@keyframes overlayfadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.7;
  }
}
@-webkit-keyframes fadeOut {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes fadeOut {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@-webkit-keyframes overlayfadeOut {
  from {
    opacity: 0.7;
  }
  to {
    opacity: 0;
  }
}
@keyframes overlayfadeOut {
  from {
    opacity: 0.7;
  }
  to {
    opacity: 0;
  }
}

#overlay,
#modal-container {
  z-index: 2000;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  overflow: hidden;
}
#overlay {
  animation: overlayfadeIn 0.4s forwards;
}
#modal-container {
  animation: fadeIn 0.4s forwards;
}
#overlay.hidden {
  animation: overlayfadeOut 0.4s forwards;
}
/* ... */

